name: Joy
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2010 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://dankna.com/software/
bug-reports: http://dankna.com/issues/create/
category: Language, Database
synopsis: Integrated lexer/parser generator
description:
  Joy is a lexer and parser generator for Haskell.  For lexers,
  it supports positive and negative lookahead and lookbehind assertions,
  subexpression capturing, and UTF8.  For parsers, it supports
  GLR, unification-based parsing, and shift-actions.

Executable joy
  main-is: Main.hs
  other-modules: Joy.Automata,
                 Joy.Client,
                 Joy.Documentation,
                 Joy.EnumSet,
                 Joy.Generation,
                 Joy.LALR1,
                 Joy.Regexp,
                 Joy.Specification,
                 Joy.Suspendability,
                 Joy.Uniqueness
  build-tools: happy >= 1.18.4
  build-depends: base >= 4.1 && < 5,
                 array >= 0.3.0.0,
                 containers >= 0.3.0.0,
                 mtl >= 1.1.0.2,
                 template-haskell,
                 time >= 1.1.4,
                 old-locale >= 1.0.0.1,
                 
                 haskell-src-exts >= 1.8.2
